<package format="3">
  <name>ros2_rust_tutorial</name>
  <version>0.0.0</version>
  <description>ros2_rust_tutorial_package</description>
  <maintainer email="shigeikuo@gmail.com">IkuoShige</maintainer>
  <license>BSD-3-Clause</license>
  
  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>ros2_rust_tutorial_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
